text vertical align fix

--- a/frontend/src/tile/Tile.less
+++ b/frontend/src/tile/Tile.less
@@ -72,6 +72,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
   }
 
   .job-name, .job-icon {
